--- a/phpstan.neon
+++ b/phpstan.neon
@@ -5,8 +5,8 @@ parameters:
 
     paths:
         - app/
+        - tests/
 
     # Level 9 is the highest level
     level: 9
-    ignoreErrors:
-        - identifier: missingType.generics
+
